# process_pdfs

./: .editorconfig  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  ROADMAP.md  SETUP.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy-frontend.yml
assets/: index-B6m3C9vZ.css  index-BcJToWuv.js  index-CXmG1FZO.css  index-D4AhF81e.css  index-DW0IpJgz.js  index-DkMbE48G.css  index-F5RSEbN-.css  index-J-m163fU.js  index-jK2Lx-Zu.css
backend/: .env.example  .gitignore  app.py  config.py  package.json  pyproject.toml  requirements.txt  server.js
backend/controllers/: signPDF.js
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Navigation.css  Navigation.jsx  PagePreview.jsx  PdfPreview.css
frontend/src/pages/: Home.jsx  MergePDF.jsx  Pages.css  RotatePDF.jsx  SignPDF.jsx  SplitPDF.jsx
src/: App.css  App.jsx  index.css
src/pages/: Home.jsx  Pages.css
